--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,10 @@ footer h4{
     background-color: inherit;
     font-weight: 300;
 }
+footer h4 a{
+    background-color: inherit;
+    text-decoration: none;
+}
+footer h4 a:hover{
+    color: orange;
+}
