--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,29 @@ footer h4 a{
 footer h4 a:hover{
     color: orange;
 }
+
+/*Media Queries*/
+
+@media(max-width: 700px){
+    main section:nth-child(n+2) {
+        padding-bottom: 0;
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-top: 0;
+    }
+    main section:nth-child(n+2) img{
+        padding-bottom: .3em;
+        padding-top: .3em;
+        width: 100%;
+    }
+    main section:nth-child(2) {
+        display: block;
+    }
+    main section:nth-child(2) article {
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+    main section:nth-child(3) {
+        display: none;
+    }      
+}
