He agregado la propiedad object-fit a todas las imágenes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ main section:nth-child(n+2){
     padding-right: 9em;
     padding-top: 3em;
 }
+main section img{    
+    object-fit: fill;
+}
 main section:nth-child(1) h1{
     font-size: 50px;
     font-weight: 400;
