--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ footer h4 a:hover{
 }
 
 /*Media Queries*/
-@media(mmin-width: 1300px) {    
+@media(min-width: 1300px) {    
     main section:nth-child(4) img  {  
         height: 14em;      
         width: 32.5%;
